--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
     <script src="../../p5_libs/p5.min.js" type="text/javascript"></script>
     <script src="../../p5_libs/p5.svg.js" type="text/javascript"></script>
+  
     <script src="sketch.js" type="text/javascript"></script>
 
   </head>
-  <body></body>
+  <body>
+    
+  </body>
 </html>
