--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 
     <script src="../../p5_libs/p5.min.js" type="text/javascript"></script>
-    <script src="../../p5_libs/p5.svg.js" type="text/javascript"></script>
-  
     <script src="sketch.js" type="text/javascript"></script>
 
   </head>
-  <body>
-    
-  </body>
+  <body></body>
 </html>
